# fdu-assignments

./: .gitignore  README.md
AIT531023/: .env  .env.example  .gitignore  README.md  download_hf.sh  认知智能项目报告_v1.docx
AIT531023/frontend-agent/: README.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
AIT531023/inference/: prompt.py  qwen3_omni_local.yaml  react_agent.py  run_multi_react.py  run_react_infer.sh  start_vllm.sh  tool_python.py  tool_search.py
CS40008/: README.md
CS40008/NLP-final-project/: .gitattributes  .gitignore  README.md
CS40008/llm-26-homework/: assignment-01-25210980120-杨晨.html  hellaswag.py  (+21 more)
CS60003/: README.md
GEEF40006/: README.md
GEEF40007/: README.md
MAS50001/: 25210980120_杨晨_hw1.md  25210980120_杨晨_hw2.md  25210980120_杨晨_hw3.md  25210980120_杨晨_hw4.md  25210980120_杨晨_hw5.md  25210980120_杨晨_hw6.md  25210980120_杨晨_hw7.md  25210980120_杨晨_hw8.md  25210980120_杨晨_hw9.md  README.md  提示词.md
MAS60001/: README.md
MAS70001/: README.md  医疗统计汇报第三组(1).pptx
STAT40011/: README.md
STAT70012/: .gitignore  README.md  reset_docker.sh  start_docker.sh  知识图谱课程项目要求.md
fdu-course-assistant/: README.md  pyproject.toml
fdu-course-assistant/configs/: local.example.yaml
fdu-course-assistant/docs/: architecture.md  capture.md  debug.md
fdu-course-assistant/docs/screenshots/: README.md
fdu-course-assistant/src/fdu_course_assistant/: __init__.py  cli.py  client.py  config.py  models.py  runner.py  session.py
fdu-course-assistant/tests/: test_client.py  test_config.py  test_runner_cli.py  test_session.py
(+550 files in other folders)
